# search-ptrn

./: Cargo.toml  README.md
src/: main.rs
