[package]
name = "search-ptrn"
version = "0.1.0"
authors = ["Sabir Khan <simplysabir@email.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/simplysabir/search-ptrn"
repository = "https://github.com/simplysabir/search-ptrn"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"]}
anyhow = "1.0"

